--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 datetime
 warnings
-matplotlib==3.4.3
-numpy==1.21.2
-pandas==1.3.3
-plotly==5.3.1
-seaborn==0.11.2
-streamlit==0.86.0
-prophet==1.0
-scikit-learn==0.24.2
-statsmodels==0.12.2
+matplotlib
+numpy
+pandas
+plotly
+seaborn
+streamlit
+prophet
+scikit-learn
+statsmodels
