--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+prophet==1.1.5
 datetime
 matplotlib
-numpy
-pandas
+numpy==1.24.3
+pandas==2.1.1
 plotly
 seaborn
 streamlit
-prophet
 scikit-learn
 statsmodels
